source/blender/makesrna/intern/rna_object.c
@@ -713,8 +713,8 @@ static bool rna_Object_parent_type_override_apply(Main *bmain,
   /* We need a special handling here because setting parent resets invert parent matrix,
    * which is evil in our case. */
   Object *ob = (Object *)(ptr_dst->data);
-  const int parent_type_dst = RNA_property_int_get(ptr_dst, prop_dst);
-  const int parent_type_src = RNA_property_int_get(ptr_src, prop_src);
+  const int parent_type_dst = RNA_property_enum_get(ptr_dst, prop_dst);
+  const int parent_type_src = RNA_property_enum_get(ptr_src, prop_src);
 
   if (parent_type_dst == parent_type_src) {
     return false;
